--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,11 @@ version: "1.0.0+1"
 dependencies: 
   cupertino_icons: "^0.1.3"
   firebase_core: "^1.0.1"
+  flutter_rating_bar: ^4.0.0
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.4
   google_sign_in: ^5.0.0
+  favorite_button: ^0.0.3
   flutter_signin_button: ^1.1.0
   path_drawing: "^0.4.1"
   flutter: 
