--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ name: "flutterapp"
 publish_to: "none"
 version: "1.0.0+1"
 dependencies: 
+  google_maps_flutter: ^2.0.1
   cupertino_icons: "^0.1.3"
   firebase_core: "^1.0.1"
   firebase_auth: ^1.0.1
