--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ dependencies:
   cupertino_icons: "^0.1.3"
   firebase_core: "^1.0.1"
   flutter_rating_bar: ^4.0.0
+  geolocator: ^7.0.3
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.4
   google_sign_in: ^5.0.0
+  http: ^0.13.1
   favorite_button: ^0.0.3
   flutter_signin_button: ^1.1.0
   path_drawing: "^0.4.1"
